# hassaanfisky-panaversity-portfolio

./: .gitignore  AGENTS.md  INFRASTRUCTURE_REPORT.md  README.md  SYSTEM_BLUEPRINT.md  SYSTEM_REBRAND_BLUEPRINT.md  deploy-log-h0-wired.txt  deploy-log-h0.txt  deploy-log-h2-root.txt  deploy-log-h2.txt  deploy-log-h3-fixed.txt  deploy-log-h3-root.txt  deploy-log-h3.txt  deploy-log-h4-fixed.txt  deploy-log-h4.txt  deploy.ps1  deploy.sh  sync-repos.ps1
hackathon-0-portfolio/AI_Employee_Vault/customer-success-fte/: .dockerignore  .gitignore  README.md  Untitled-1.txt  alembic.ini  kafka_client.py  pyproject.toml  requirements.txt
hackathon-0-portfolio/AI_Employee_Vault/customer-success-fte/agent/: customer_success_agent.py  formatters.py  prompts.py  tools.py
hackathon-0-portfolio/AI_Employee_Vault/customer-success-fte/backend/: config.py  main.py  requirements.txt
hackathon-0-portfolio/AI_Employee_Vault/customer-success-fte/backend/api/: main.py
hackathon-0-portfolio/AI_Employee_Vault/customer-success-fte/channels/: gmail_handler.py  web_form_handler.py  whatsapp_handler.py
hackathon-0-portfolio/AI_Employee_Vault/customer-success-fte/database/: queries.py  schema.sql  seed_knowledge_base.py
hackathon-0-portfolio/AI_Employee_Vault/customer-success-fte/docker/: Dockerfile.api  Dockerfile.webform  Dockerfile.worker
hackathon-0-portfolio/AI_Employee_Vault/customer-success-fte/docs/: DEPLOYMENT.md
hackathon-0-portfolio/AI_Employee_Vault/customer-success-fte/specs/: customer-success-fte-spec.md  discovery-log.md
hackathon-0-portfolio/AI_Employee_Vault/customer-success-fte/src/agent/: agent.py  (+2 more)
hackathon-0-portfolio/AI_Employee_Vault/customer-success-fte/tests/: conftest.py  test_agent.py  test_channels.py  test_e2e.py
hackathon-0-portfolio/AI_Employee_Vault/customer-success-fte/web-form/: next.config.js  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
hackathon-0-portfolio/AI_Employee_Vault/customer-success-fte/workers/: message_processor.py
(+533 files in other folders)
